# GeoLens-Europa

./: .firebaserc  .gitignore  FRONTEND_OPTIMIZATION_GUIDE.md  IMPLEMENTATION_COMPLETE.md  MOCK_DATA_AUDIT.md  NASA_PRECIPITATION_IMPLEMENTATION_COMPLETE.md  NASA_PRECIP_PHASE1_COMPLETE.md  NASA_PRECIP_PHASE2_COMPLETE.md  OPTIMIZATION_COMPLETE.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_SUMMARY.md  README.md  REAL_DATA_IMPLEMENTATION.md  RISK_ENGINE_ANALYSIS.md  TEST_REPORT.md  build_log.txt  build_log_3.txt  build_log_4.txt  build_log_5.txt  build_log_6.txt  build_log_7.txt  firebase.json  models.json  package-lock.json  package.json  response_hit.json  response_hit_v2.json  response_miss.json  response_miss_v2.json  tsconfig.base.json  vercel.json
.firebase/: hosting.YXBwcy93ZWIvb3V0.cache
copernicus-engine/: .copernicus_key.pem  .env.example  README.md  clc2018_full_details.json  requirements.txt  search_results_CLC2018.json  search_results_CORINE_2018.json  search_results_Corine_Land_Cover.json  search_results_clc.json  test_clms_api.py  test_clms_search.py  test_dataset_details.py  test_get_urls.py
data/: source_data.csv
nasa-precip-engine/: .env.example  README.md  debug_script.py  pyproject.toml  requirements.txt
nasa-precip-engine/src/: __init__.py  cache.py  config.py  h3_mapping.py  imerg_client.py  main.py
scripts/: debug-h3.ts  debug-nasa-feed.ts  debug-nasa-internal.py  generate-data.ts  test-client-sdk.ts  test-datacube-memory.ts  test-datacube-pg.ts  test-gemini.js  test-large-area.ts  test-optimized-tile.ts  test-orchestrator.ts  (+2 more)
(+81 files in other folders)
